Changes for migration of openhab cloud to node v7.5.0
Signed-off-by: Mehmet Arziman <mehmet@arziman.de>

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     },
     "dependencies": {
         "express": "3.20.2",
-        "ejs": "0.8.4",
-        "less-middleware": "0.1.11",
+        "ejs": "2.5.5",
+        "less-middleware": "2.2.0",
         "socket.io": "1.3.7",
         "socket.io-client": "1.1.0",
         "request": "2.16.6",
@@ -17,15 +17,15 @@
         "mongoose-types": "1.0.3",
         "passport": "0.1.18",
         "passport-local": "1.0.0",
-        "bcrypt": "0.8.3",
+        "bcrypt-nodejs": "0.0.3",
         "connect-mongodb": "1.1.5",
         "redis": "2.6.2",
         "hiredis": "0.4",
         "ejs-locals": "1.0.2",
-        "express-form": "0.8.x",
+        "express-form": "0.12.6",
         "connect-flash": "0.1.1",
         "chokidar": "0.6.2",
-        "uuid": "1.4.1",
+        "uuid": "3.0.1",
         "node-gcm": "0.14.4",
         "winston": "0.7.2",
         "nodemailer": "0.5.2",
@@ -33,8 +33,8 @@
         "email-templates": "1.3.0",
         "moment": "2.3.1",
         "timezone": "0.0.23",
-        "time": "0.11.3",
-        "node-xmpp": "0.8.0",
+        "time": "0.11.4",
+        "node-xmpp": "1.0.8",
         "cron": "1.0.3",
         "apn": "1.7.6",
         "oauth2orize": "1.0.1",
@@ -42,7 +42,7 @@
         "passport-oauth2-client-password": "0.1.2",
         "passport-http-bearer": "1.0.1",
         "socket.io-redis": "0.1.4",
-        "memwatch": "0.2.2",
+        "memwatch-next": "0.3.0",
         "heapdump": "0.3.7",
         "socket.io-redis": "1.0.0",
         "mongoose-cache": "0.1.4",
